--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Walmart",
+    "name": "Gemmart",
     "description": "This project is really great.",
-    "slug": "Walmart",
+    "slug": "Gemmart",
     "privacy": "public",
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
